[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeglob"
version = "1.0.0"
description = "Universal Market Data Fetcher - Access 3.5+ million instruments from global exchanges"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
authors = [
    {name = "Ibrahim Badawy", email = "ibrahim.m.badawy@gmail.com"}
]
keywords = ["trading", "stocks", "forex", "crypto", "market data", "tradingview", "technical analysis", "finance", "EGX", "NASDAQ"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "tvdatafeed @ git+https://github.com/rongardF/tvdatafeed.git",
    "retry>=0.9.2",
    "pandas>=1.3.0",
    "holidays>=0.17",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.0.0"]
parquet = ["pyarrow>=6.0.0"]
hdf5 = ["tables>=3.6.0"]
all = ["openpyxl>=3.0.0", "pyarrow>=6.0.0", "tables>=3.6.0"]

[project.urls]
Homepage = "https://github.com/ibrasonic/tradeglob"
Documentation = "https://github.com/ibrasonic/tradeglob/blob/main/README.md"
Repository = "https://github.com/ibrasonic/tradeglob"
"Bug Reports" = "https://github.com/ibrasonic/tradeglob/issues"

[tool.setuptools]
packages = ["tradeglob", "tradeglob.utils"]
